--- a/components/blog-post-card2.html
+++ b/components/blog-post-card2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en"
   ><head
-    ><title>NB Media</title
+    ><title>NB Media: Content creator advertising and management agency</title
     ><meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
