--- a/index.css
+++ b/index.css
@@ -149,7 +149,7 @@
   flex-direction: column;
   background-size: cover;
   justify-content: center;
-  background-image: linear-gradient(113.8deg, rgba(255, 255, 255, 0.5) 7.5%, rgba(255, 177, 70, 0.1) 94.47%),391d7fe1-837c-4bd0-a08f-c712e7bf4c1a;
+  background-image: "public/external/416c71_a14248494650405ca4f50174753e94cf~mv2.jpg";
   background-repeat: top,no-repeat;
   background-position: top lefttop left,center;
 }
