--- a/index.css
+++ b/index.css
@@ -149,9 +149,9 @@
   flex-direction: column;
   background-size: cover;
   justify-content: center;
-  background-image: url('/public/external/416c71_a14248494650405ca4f50174753e94cf~mv2.jpg');
-  background-repeat: top,no-repeat;
-  background-position: top lefttop left,center;
+  background-image: url("public/external/416c71_a14248494650405ca4f50174753e94cf~mv2.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
 }
 .home-text {
   left: 0px;
@@ -497,8 +497,8 @@
   .home-hero {
     flex-direction: column;
     background-size: cover,auto;
-    background-image: linear-gradient(113.8deg, rgba(255, 255, 255, 0.5) 7.5%, rgba(255, 177, 70, 0.1) 94.47%),url('https://images.unsplash.com/photo-1462804993656-fac4ff489837?ixid=M3w5MTMyMXwwfDF8c2VhcmNofDE1fHxtb2RlbCUyMG9uJTIwYmVhY3xlbnwwfHx8fDE3MTQ4OTQzNTN8MA&ixlib=rb-4.0.3&w=1500');
-    background-repeat: top,no-repeat;
+    background-image: url('https://images.unsplash.com/photo-1462804993656-fac4ff489837?ixid=M3w5MTMyMXwwfDF8c2VhcmNofDE1fHxtb2RlbCUyMG9uJTIwYmVhY3xlbnwwfHx8fDE3MTQ4OTQzNTN8MA&ixlib=rb-4.0.3&w=1500');
+    background-repeat: bottom;
     background-position: top lefttop left,bottom;
   }
   .home-text {
