Commit from TeleportHQ

--- a/components/component.html
+++ b/components/component.html
@@ -177,10 +177,16 @@
         width: 750px !important;
       }
       }
-    </style>
-
+    </style></head
+  ><body
+    ><link rel="stylesheet" href="../style.css" /><div
+      ><link href="./component.css" rel="stylesheet" /><div
+        class="app-component-container"
+      ></div
+    ></div>
     <script type="text/javascript">
       (function() {
+      console.log('123')
       	try{
 
       			if( document.readyState == "complete" ){
@@ -358,15 +364,8 @@
 
 
       	}catch(e){}
-      })();
-    </script></head
-  ><body
-    ><link rel="stylesheet" href="../style.css" /><div
-      ><link href="./component.css" rel="stylesheet" /><div
-        class="app-component-container"
-      ></div
-    ></div>
-    <script
+      })();</script
+    ><script
       defer=""
       src="https://unpkg.com/@teleporthq/teleport-custom-scripts"
     ></script></body
