--- a/components/navigation-links.html
+++ b/components/navigation-links.html
@@ -177,10 +177,19 @@
         width: 750px !important;
       }
       }
-    </style>
-
+    </style></head
+  ><body
+    ><link rel="stylesheet" href="../style.css" /><div
+      ><link href="./navigation-links.css" rel="stylesheet" /><nav
+        class="navigation-links-nav"
+        ><span class="navigation-links-text"><span>About</span></span
+        ><span class="navigation-links-text1"><span>Features</span></span
+        ><span class="navigation-links-text2"><span>Pricing</span></span></nav
+      ></div
+    >
     <script type="text/javascript">
       (function() {
+      console.log('123')
       	try{
 
       			if( document.readyState == "complete" ){
@@ -358,18 +367,8 @@
 
 
       	}catch(e){}
-      })();
-    </script></head
-  ><body
-    ><link rel="stylesheet" href="../style.css" /><div
-      ><link href="./navigation-links.css" rel="stylesheet" /><nav
-        class="navigation-links-nav"
-        ><span class="navigation-links-text"><span>About</span></span
-        ><span class="navigation-links-text1"><span>Features</span></span
-        ><span class="navigation-links-text2"><span>Pricing</span></span></nav
-      ></div
-    >
-    <script
+      })();</script
+    ><script
       defer=""
       src="https://unpkg.com/@teleporthq/teleport-custom-scripts"
     ></script></body
