--- a/components/blog-post-card2.html
+++ b/components/blog-post-card2.html
@@ -177,10 +177,48 @@
         width: 750px !important;
       }
       }
-    </style>
-
+    </style></head
+  ><body
+    ><link rel="stylesheet" href="../style.css" /><div
+      ><link href="./blog-post-card2.css" rel="stylesheet" /><div
+        class="blog-post-card2-blog-post-card"
+        ><img
+          alt="image"
+          src="https://images.unsplash.com/photo-1534528741775-53994a69daeb?ixid=Mnw5MTMyMXwwfDF8c2VhcmNofDd8fHBvcnRyYWl0fGVufDB8fHx8MTYyNjM3ODk3Mg&amp;ixlib=rb-1.2.1&amp;w=1000"
+          image_src="https://images.unsplash.com/photo-1534528741775-53994a69daeb?ixid=Mnw5MTMyMXwwfDF8c2VhcmNofDd8fHBvcnRyYWl0fGVufDB8fHx8MTYyNjM3ODk3Mg&amp;ixlib=rb-1.2.1&amp;h=1000"
+          class="blog-post-card2-image"
+        /><div class="blog-post-card2-container"
+          ><div class="blog-post-card2-container1"
+            ><span class="blog-post-card2-text"><span>ENTERPRISE</span></span
+            ><span class="blog-post-card2-text1"
+              ><span>3 days ago</span></span
+            ></div
+          ><h1 class="blog-post-card2-text2"
+            ><span>Lorem ipsum dolor sit amet</span></h1
+          ><span class="blog-post-card2-text3"
+            ><span
+              >Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non
+              volutpat turpis. Mauris luctus rutrum mi ut rhoncus. Integer in
+              dignissim tortor. Lorem ipsum dolor sit amet, consectetur
+              adipiscing ...</span
+            ></span
+          ><div class="blog-post-card2-container2"
+            ><div class="blog-post-card2-profile"
+              ><img
+                alt="profile"
+                src="https://images.unsplash.com/photo-1534528741775-53994a69daeb?ixid=Mnw5MTMyMXwwfDF8c2VhcmNofDd8fHBvcnRyYWl0fGVufDB8fHx8MTYyNjM3ODk3Mg&amp;ixlib=rb-1.2.1&amp;h=1200"
+                class="blog-post-card2-image1"
+              /><span class="blog-post-card2-text4"
+                ><span>Jane Doe</span></span
+              ></div
+            ><span class="blog-post-card2-text5">Read More -&gt;</span></div
+          ></div
+        ></div
+      ></div
+    >
     <script type="text/javascript">
       (function() {
+      console.log('123')
       	try{
 
       			if( document.readyState == "complete" ){
@@ -358,47 +396,8 @@
 
 
       	}catch(e){}
-      })();
-    </script></head
-  ><body
-    ><link rel="stylesheet" href="../style.css" /><div
-      ><link href="./blog-post-card2.css" rel="stylesheet" /><div
-        class="blog-post-card2-blog-post-card"
-        ><img
-          alt="image"
-          src="https://images.unsplash.com/photo-1534528741775-53994a69daeb?ixid=Mnw5MTMyMXwwfDF8c2VhcmNofDd8fHBvcnRyYWl0fGVufDB8fHx8MTYyNjM3ODk3Mg&amp;ixlib=rb-1.2.1&amp;w=1000"
-          image_src="https://images.unsplash.com/photo-1534528741775-53994a69daeb?ixid=Mnw5MTMyMXwwfDF8c2VhcmNofDd8fHBvcnRyYWl0fGVufDB8fHx8MTYyNjM3ODk3Mg&amp;ixlib=rb-1.2.1&amp;h=1000"
-          class="blog-post-card2-image"
-        /><div class="blog-post-card2-container"
-          ><div class="blog-post-card2-container1"
-            ><span class="blog-post-card2-text"><span>ENTERPRISE</span></span
-            ><span class="blog-post-card2-text1"
-              ><span>3 days ago</span></span
-            ></div
-          ><h1 class="blog-post-card2-text2"
-            ><span>Lorem ipsum dolor sit amet</span></h1
-          ><span class="blog-post-card2-text3"
-            ><span
-              >Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non
-              volutpat turpis. Mauris luctus rutrum mi ut rhoncus. Integer in
-              dignissim tortor. Lorem ipsum dolor sit amet, consectetur
-              adipiscing ...</span
-            ></span
-          ><div class="blog-post-card2-container2"
-            ><div class="blog-post-card2-profile"
-              ><img
-                alt="profile"
-                src="https://images.unsplash.com/photo-1534528741775-53994a69daeb?ixid=Mnw5MTMyMXwwfDF8c2VhcmNofDd8fHBvcnRyYWl0fGVufDB8fHx8MTYyNjM3ODk3Mg&amp;ixlib=rb-1.2.1&amp;h=1200"
-                class="blog-post-card2-image1"
-              /><span class="blog-post-card2-text4"
-                ><span>Jane Doe</span></span
-              ></div
-            ><span class="blog-post-card2-text5">Read More -&gt;</span></div
-          ></div
-        ></div
-      ></div
-    >
-    <script
+      })();</script
+    ><script
       defer=""
       src="https://unpkg.com/@teleporthq/teleport-custom-scripts"
     ></script></body
